refactor: Improve WhyChooseBrandbeat component markup and self-closing tags
Enhance Astro component structure by:
- Adding proper self-closing tags for Image components
- Improving section layout and whitespace
- Maintaining consistent code formatting

--- a/frontend-astro/src/components/index/WhyChooseBrandbeat/WhyChooseBrandbeat.astro
+++ b/frontend-astro/src/components/index/WhyChooseBrandbeat/WhyChooseBrandbeat.astro
@@ -13,7 +13,8 @@ import GoldSocialMediaContentCreationManagementLogo from './images/gold_social_m
 ---
 
 
-<section id="about" class="home_about"><Image width="424" src={LeftBlur} alt="" class="left_blur">
+<section id="about" class="home_about">
+  <Image width="424" src={LeftBlur} alt="" class="left_blur" />
     <div class="container_flex zindex_2">
       <div class="title_wrap">
         <h2 class="content_h2 content_h2_center">Why Choose <span class="h2_span highlight">Brand Beat?</span></h2>
@@ -35,8 +36,10 @@ import GoldSocialMediaContentCreationManagementLogo from './images/gold_social_m
           <div class="feature_image_div"><Image width="3570" height="5355" alt="" src={CocktailGlass} style="color:#d9d9d9;background-color:#d9d9d9" class="feature_image unsplash-image"></div>
         </div>
       </div>
-    </div><Image width="424" src={RightBlur} alt="" class="right_blur">
-  </section>
+    </div>
+  <Image width="424" src={RightBlur} alt="" class="right_blur" />
+</section>
+
   <section id="services" class="home_services">
     <div class="container_flex left_align">
       <div class="title_wrap vflex">
